<resources>
    <string name="app_name">Compress Audios</string>
    <string name="completed">Compress completed!!!</string>
    <string name="compressing">Compressing audio</string>
    <string name="compressing1">Compressing</string>

    <string name="folder">Output Folder:</string>
    <string name="format">Output format</string>
    <string name="of">of</string>
    <string name="open_path">Outputs</string>
    <string name="progress">Progress</string>
    <string name="results">Results</string>

    <string name="select_bitrate">Select Bitrate</string>
    <string name="select_file">Select\nAudio File</string>
    <string name="select_folder">Select\nAudios Folder</string>
    <string name="select_format">Please select audio output format</string>
    <string name="select_quality">Select audio quality</string>

    <string name="success">Success:</string>
    <string name="error">Error:</string>

    <string name="action_settings">Settings</string>

    <string name="empty">Empty folder</string>

    <string name="nativo" translatable="false">ca-app-pub-6420027936185714/2361755059</string>
    <string name="inter" translatable="false">ca-app-pub-6420027936185714/3442473836</string>
    <string name="load" translatable="false">ca-app-pub-6420027936185714/3059330457</string>
    <string name="app_id" translatable="false">ca-app-pub-6420027936185714~3685746915</string>
    <string name="banner1" translatable="false">ca-app-pub-6420027936185714/5398267926</string>
    <string name="banner2" translatable="false">ca-app-pub-6420027936185714/4351961328</string>

</resources>