<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" android:orientation="vertical" android:background="@color/purple_50" android:layout_width="match_parent" android:layout_height="match_parent">
    <LinearLayout android:orientation="vertical" android:layout_width="match_parent" android:layout_height="match_parent">
        <com.google.android.gms.ads.AdView android:id="@+id/adView" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_margin="4dp" android:layout_alignParentBottom="true" android:layout_centerHorizontal="true" app:adSize="BANNER" app:adUnitId="@string/banner1"/>
        <LinearLayout android:gravity="center" android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="20dp">
            <androidx.cardview.widget.CardView android:id="@+id/folder_card" android:layout_width="140dp" android:layout_height="150dp" android:layout_margin="10dp" android:elevation="8dp" app:cardCornerRadius="15dp">
                <LinearLayout android:gravity="center" android:orientation="vertical" android:id="@+id/folder_layout" android:background="@android:color/white" android:layout_width="match_parent" android:layout_height="match_parent">
                    <ImageView android:background="@drawable/ic_baseline_music_video_24" android:layout_width="80dp" android:layout_height="80dp" android:layout_margin="5dp"/>
                    <TextView android:textSize="14sp" android:textColor="@color/purple_700" android:gravity="center" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/select_folder"/>
                </LinearLayout>
            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView android:id="@+id/file_card" android:layout_width="140dp" android:layout_height="150dp" android:layout_margin="10dp" android:layout_marginStart="50dp" android:elevation="8dp" app:cardCornerRadius="15dp">
                <LinearLayout android:gravity="center" android:orientation="vertical" android:id="@+id/file_layout" android:background="@android:color/white" android:layout_width="match_parent" android:layout_height="match_parent">
                    <ImageView android:background="@drawable/ic_baseline_audiotrack_24" android:layout_width="70dp" android:layout_height="70dp" android:layout_margin="5dp"/>
                    <TextView android:textSize="14sp" android:textColor="@color/purple_700" android:gravity="center" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginBottom="5dp" android:text="@string/select_file"/>
                </LinearLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>
        <androidx.cardview.widget.CardView android:layout_gravity="center" android:id="@+id/output_card" android:layout_width="140dp" android:layout_height="150dp" android:layout_margin="20dp" android:elevation="8dp" app:cardCornerRadius="15dp">
            <LinearLayout android:gravity="center" android:orientation="vertical" android:id="@+id/output_layout" android:background="@android:color/white" android:layout_width="match_parent" android:layout_height="match_parent">
                <ImageView android:background="@drawable/ic_baseline_folder_24" android:layout_width="80dp" android:layout_height="80dp" android:layout_margin="5dp"/>
                <TextView android:textSize="14sp" android:textColor="@color/purple_700" android:gravity="center" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginBottom="5dp" android:text="@string/open_path"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>
        <LinearLayout android:orientation="vertical" android:background="@color/purple_500" android:paddingBottom="4dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="10dp">
            <TextView android:textSize="20sp" android:textStyle="bold" android:textColor="@color/purple_700" android:gravity="center" android:background="@android:color/white" android:padding="6dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/progress"/>
            <TextView android:textStyle="bold" android:textColor="@color/white" android:gravity="center" android:id="@+id/counter" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="0/0"/>
            <TextView android:textStyle="bold" android:textColor="@color/white" android:ellipsize="end" android:gravity="center" android:id="@+id/filename" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="" android:maxLines="1"/>
            <TextView android:textStyle="bold" android:textColor="@color/white" android:gravity="center" android:id="@+id/percent" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="0%"/>
        </LinearLayout>
        <LinearLayout android:orientation="vertical" android:background="@color/purple_500" android:paddingBottom="4dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="10dp">
            <TextView android:textSize="20sp" android:textStyle="bold" android:textColor="@color/purple_700" android:gravity="center" android:background="@android:color/white" android:padding="6dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/results"/>
            <TextView android:textStyle="bold" android:textColor="@color/white" android:gravity="center" android:id="@+id/success" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/success"/>
            <TextView android:textStyle="bold" android:textColor="@color/white" android:gravity="center" android:id="@+id/error" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/error"/>
        </LinearLayout>
    </LinearLayout>
</ScrollView>
